# OT-projekti

./: .gitignore  README.md  pyproject.toml
BudgetApp/: .coveragerc  .pylintrc  budget_app.db  pyproject.toml  tasks.py
BudgetApp/dokumentaatio/: Changelog.md  arkkitehtuuri.md  chatgpt_selvitys.md  kayttoohje.md  komentorivikomennot.md  testaus.md  tuntikirjanpito.md  vaativuusmaarittely.md
BudgetApp/src/: app.py  budget_app_db.db  budget_app_db.py  build.py  database.py  dbapp.py
BudgetApp/src/tests/: budget_app_db_test.py
BudgetApp/src/views/: app_view.py  budget_view.py  login_view.py  register_view.py  transaction_view.py  view.py  view_controller.py
LASKARIT/: viikko1.md
LASKARIT/viikko2/maksukortti/: pyproject.toml
LASKARIT/viikko2/maksukortti/src/: maksukortti.py
LASKARIT/viikko2/maksukortti/src/tests/: maksukortti_test.py
LASKARIT/viikko2/unicafe/: pyproject.toml
LASKARIT/viikko2/unicafe/src/: kassapaate.py  maksukortti.py
LASKARIT/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
LASKARIT/viikko3/: HSL_sekvenssikaavio.md  monopoliLuokkakaavio.md
OT_harjoitustyo/BudjettiSovellus/: budget_app_db.db  budget_app_db.py  main.py
OT_harjoitustyo/dokumentaatio/: schema.sql  tuntikirjanpito.md  vaativuusmaarittely.md
